# BSU-MultiThread-Programming

./: .gitignore  Makefile  ProcessCreation1.sln  README.md
1. Processes/: ProcessCreation1.sln
1. Processes/CreatorUtility/: Creator.cpp  debug.txt
1. Processes/ProcessCreation1/: Main.cpp  ProcessCreation1.vcxproj  data.txt
1. Processes/ReporterUtility/: Reporter.cpp  Reporter.h  ReporterUtility.vcxproj.filters
2. Threads/: Makefile  README.md
2. Threads/include/: array_utils.h  average_thread.h  min_max.h
2. Threads/src/: array_utils.cc  average_thread.cc  main.cc  min_max.cc
3. Synchronization/: README.md
3. Thread Synchronization/: Makefile
4. Parallel Processes/: Cargo.toml  README.md
4. Process Message Exchange/: Cargo.toml
4. Process Synchronization/: 4. Process Synchronization.sln  4. Process Synchronization.vcxproj
5. Named Pipes/: Cargo.toml  README.md
5. Named Pipes/src/: client.rs  main.rs
Colloquium/: Makefile  README.md
Colloquium/src/: actor.cc  (+2 more)
Common/: Common.vcxproj  Common.vcxproj.filters  Employee.h
CreatorUtility/: Creator.cpp  Creator.h  CreatorUtility.vcxproj  CreatorUtility.vcxproj.filters
ProcessCreation1/: Creator.cpp  Creator.h  Employee.cpp  Employee.h  Main.cpp  ProcessCreation1.vcxproj  ProcessCreation1.vcxproj.filters  Reporter.cpp  Reporter.h
ReporterUtility/: Reporter.h  ReporterUtility.vcxproj  ReporterUtility.vcxproj.filters
Test/: Test.sln
include/: array_thread.h  average_thread.h  min_max.h
src/: array_thread.cc  average_thread.cc  main.cc  min_max.cc
test/: average_test.cc  min_max_test.cc
(+20 files in other folders)
